<resources>
    <string name="app_name">Task</string>
    <string name="no_network_connectivity">No Connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try Again</string>
    <string name="please_check_your_internet_connection_and_n_try_again">Please check your internet connection and try again</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="next">Next</string>
    <string name="payment_process">Payment process</string>
    <string name="five_egp">5 EGP</string>
    <string name="seven_egp">7 EGP</string>
    <string name="ten_egp">10 EGP</string>
    <string name="registration_form">Registration Form</string>
    <string name="please_enter_valid_age">Please enter a valid age</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="scan_qr_code_to_get_your_info">Scan QR Code to get your info .</string>
    <string name="select_your_payment">Select your payment :</string>
    <string name="please_enter_valid_name">Please enter a valid name</string>
</resources>